--- a/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
+++ b/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
@@ -1,24 +1,28 @@
-<div ngbDropdown placement="bottom-right" *ngIf="user$ | async as _user" class="kt-header__topbar-item kt-header__topbar-item--user">
+<div ngbDropdown placement="bottom-right" class="kt-header__topbar-item kt-header__topbar-item--user">
 	<div ngbDropdownToggle class="kt-header__topbar-wrapper">
 		<div class="kt-header__topbar-user" [ngClass]="{'kt-header__topbar-icon': icon}">
 			<span class="kt-header__topbar-welcome kt-hidden-mobile" *ngIf="greeting">Hi,</span>
-			<span class="kt-header__topbar-username kt-hidden-mobile" *ngIf="greeting">{{_user.fullname}}</span>
+			<span class="kt-header__topbar-username kt-hidden-mobile"
+				*ngIf="greeting">{{user$.firstName | titlecase}}</span>
 			<i *ngIf="icon" class="flaticon2-user-outline-symbol"></i>
-			<img *ngIf="avatar" alt="Pic" [attr.src]="_user.pic">
-			<span *ngIf="badge" class="kt-badge kt-badge--username kt-badge--unified-success kt-badge--lg kt-badge--rounded kt-badge--bold">{{_user.fullname|firstLetter}}</span>
+			<!-- <img *ngIf="avatar" alt="Pic" [attr.src]="_user.pic"> -->
+			<span *ngIf="badge"
+				class="kt-badge kt-badge--username kt-badge--unified-success kt-badge--lg kt-badge--rounded kt-badge--bold">{{user$.firstName|firstLetter}}</span>
 		</div>
 	</div>
-	<div ngbDropdownMenu class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-xl">
+	<div ngbDropdownMenu
+		class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-xl">
 		<!--begin: Head -->
-		<div class="kt-user-card kt-user-card--skin-dark kt-notification-item-padding-x" style="background-image: url(./assets/media/misc/bg-1.jpg)">
+		<div class="kt-user-card kt-user-card--skin-dark kt-notification-item-padding-x"
+			style="background-image: url(./assets/media/misc/bg-1.jpg)">
 			<div class="kt-user-card__avatar">
-				<img alt="Pic" [attr.src]="_user.pic"/>
+				<!-- <img alt="Pic" [attr.src]="_user.pic" /> -->
 				<span [hidden]="true" class="kt-badge kt-badge--lg kt-badge--rounded kt-badge--bold kt-font-success">
-					{{_user.fullname|firstLetter}}
+					{{user$.firstName + ' '+ user$.lastName|firstLetter}}
 				</span>
 			</div>
 			<div class="kt-user-card__name">
-				{{_user.fullname}}
+				{{user$.firstName}}
 			</div>
 			<div class="kt-user-card__badge">
 				<span class="btn btn-success btn-sm btn-bold btn-font-md">23 messages</span>
@@ -81,7 +85,8 @@
 				</div>
 			</a>
 			<div class="kt-notification__custom">
-				<a href="javascript:;" (click)="logout()" class="btn btn-outline-brand btn-upper btn-sm btn-bold">Sign Out</a>
+				<a href="javascript:;" (click)="logout()" class="btn btn-outline-brand btn-upper btn-sm btn-bold">Sign
+					Out</a>
 			</div>
 		</div>
 		<!--end: Navigation -->
