bhushan: Add partner UI

--- a/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<kt-toastr #toastr></kt-toastr>
 <!--begin::Head-->
 <div class="kt-login__head">
 	<span class="kt-login__signup-label">Don't have an account yet?</span>&nbsp;&nbsp;
