--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-add/branch-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-add/branch-add.component.html
@@ -1,7 +1,6 @@
 <!-- <kt-action-natification></kt-action-natification> -->
 <kt-toastr #toastr></kt-toastr>
-<div class="kt-portlet"
-    [ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
+<div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom">
         <div class="kt-portlet__head-label">
             <h3 class="kt-portlet__head-title">Add Partner</h3>
@@ -24,45 +23,37 @@
 
                     <div class="form-group kt-form__group row">
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
-                            <!-- Partner Name -->
-                            <div>
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>Partner Name</mat-label>
-                                    <input matInput formControlName="name" autocomplete="off"
-                                        placeholder="Enter Partner Name" [disabled]="canEdit">
-                                    <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-                                    <!-- <mat-hint>Hint</mat-hint> -->
-                                    <mat-error *ngIf="controls.name.errors?.required">Required field</mat-error>
 
-                                </mat-form-field>
-                            </div>
 
                             <div class="row">
+                                <!-- Partner Name -->
+                                <div class="col">
+                                    <mat-form-field appearance="outline" class="w-100">
+                                        <mat-label>Branch Name</mat-label>
+                                        <input matInput formControlName="name" autocomplete="off"
+                                            placeholder="Enter Partner Name" [readonly]="viewOnly">
+                                        <mat-error *ngIf="controls.name.errors?.required">Required field</mat-error>
+
+                                    </mat-form-field>
+                                </div>
+
                                 <!-- Partner Id -->
                                 <div class="col">
                                     <mat-form-field appearance="outline" class="w-100">
                                         <mat-label>Partner Id</mat-label>
-                                        <input matInput formControlName="partnerId" autocomplete="off"
-                                            placeholder="Enter Partner Id">
+                                        <!-- <input matInput formControlName="partnerId" autocomplete="off"
+                                            placeholder="Enter Partner Id"> -->
+                                        <mat-select formControlName="partnerId" [disabled]="viewOnly">
+                                            <mat-option *ngFor="let partner of partners" [value]="partner.id">
+                                                {{partner.name}}
+                                            </mat-option>
+                                        </mat-select>
                                         <mat-error *ngIf="controls.partnerId.errors?.required">Required field
                                         </mat-error>
 
                                     </mat-form-field>
                                 </div>
 
-                                <div class="col">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>Commission</mat-label>
-                                        <input matInput formControlName="commission" type="number"
-                                            placeholder="Enter Commission" min="0" max="100" [disabled]="canEdit">
-                                        <mat-error *ngIf="controls.commission.errors?.required">Required field
-                                        </mat-error>
-                                        <mat-error
-                                            *ngIf="controls.commission.errors?.min ||controls.commission.errors?.max">
-                                            Invalid Input</mat-error>
-
-                                    </mat-form-field>
-                                </div>
                             </div>
 
 
@@ -70,12 +61,13 @@
                                 <div class="col">
                                     <mat-form-field appearance="outline" class="w-100">
                                         <mat-label>State</mat-label>
-                                        <mat-select formControlName="state" (selectionChange)="getCities($event)">
+                                        <mat-select formControlName="stateId" (selectionChange)="getCities($event)"
+                                            [disabled]="viewOnly">
                                             <mat-option *ngFor="let state of states" [value]="state.id">
                                                 {{state.name}}
                                             </mat-option>
                                         </mat-select>
-                                        <mat-error *ngIf="controls.state.errors?.required">Required field</mat-error>
+                                        <mat-error *ngIf="controls.stateId.errors?.required">Required field</mat-error>
 
                                     </mat-form-field>
                                 </div>
@@ -83,25 +75,42 @@
                                 <div class="col">
                                     <mat-form-field appearance="outline" class="w-100">
                                         <mat-label>City</mat-label>
-                                        <mat-select formControlName="city">
+                                        <mat-select formControlName="cityId" [disabled]="viewOnly">
                                             <mat-option *ngFor="let city of cities" [value]="city.id">
                                                 {{city.name}}
                                             </mat-option>
                                         </mat-select>
-                                        <mat-error *ngIf="controls.city.errors?.required">Required field</mat-error>
+                                        <mat-error *ngIf="controls.cityId.errors?.required">Required field</mat-error>
 
                                     </mat-form-field>
                                 </div>
                             </div>
 
-                            <!-- Address -->
-                            <div>
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>Address</mat-label>
-                                    <input matInput formControlName="address" placeholder="Enter Address">
-                                    <mat-error *ngIf="controls.address.errors?.required">Required field</mat-error>
-                                </mat-form-field>
+                            <div class="row">
+                                <!-- Pin Code -->
+                                <div class="col">
+                                    <mat-form-field appearance="outline" class="w-100">
+                                        <mat-label>Pin Code</mat-label>
+                                        <input matInput formControlName="pincode" placeholder="Enter Pin Code"
+                                            [readonly]="viewOnly">
+                                        <mat-error *ngIf="controls.pincode.errors?.required">Required field</mat-error>
+                                    </mat-form-field>
+                                </div>
+
+
+                                <!-- Address -->
+                                <div class="col">
+                                    <mat-form-field appearance="outline" class="w-100">
+                                        <mat-label>Address</mat-label>
+                                        <textarea matInput rows="3" formControlName="address"
+                                            placeholder="Enter Address" [readonly]="viewOnly"></textarea>
+                                        <mat-error *ngIf="controls.address.errors?.required">Required field</mat-error>
+                                    </mat-form-field>
+                                </div>
+
+
                             </div>
+
 
                         </div>
                     </div>
@@ -115,8 +124,7 @@
                                     matTooltip="Cancel changes">
                                     Cancel
                                 </button>&nbsp;
-                                <button type="button" mat-raised-button color="primary"
-                                    [disabled]="branchForm.invalid || canEdit" (click)="onSubmit()"
+                                <button type="button" mat-raised-button color="primary" (click)="onSubmit()"
                                     matTooltip="Save changes">
                                     Save
                                 </button>
