--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
@@ -1,12 +1,11 @@
-<!-- <p>partner-list works!</p> -->
-
+<kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <!-- PORTLET LOADING | Binded to TABLE Datasource -->
     <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <kt-portlet-header [title]="'Partners List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+    <kt-portlet-header [title]="'Branches List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
 
         <ng-container ktPortletTools>
-            <button (click)="addRole()" mat-raised-button matTooltip="Create new role" color="primary" type="button">
+            <button (click)="addRole()" mat-raised-button matTooltip="Create new branch" color="primary" type="button">
                 <span>Add Branch</span>
             </button>
             <!-- Buttons (Material Angular) | See off.documenations 'https://material.angular.io/components/button/overview' -->
@@ -33,34 +32,6 @@
             </div>
             <!-- end::FILTERS -->
 
-            <!-- start::GROUP ACTIONS -->
-            <!-- Group actions list: 'Delete selected' | 'Fetch selected' | 'Update status for selected' -->
-            <!-- Group actions are shared for all LISTS -->
-            <div class="row align-items-center collapse kt-form__group-actions kt-margin-top-20 kt-margin-bottom-20"
-                [ngClass]="{'show' : selection.selected.length > 0}">
-                <!-- We show 'Group Actions' div if smth are selected -->
-                <div class="col-xl-12">
-                    <div class="kt-form__group kt-form__group--inline">
-                        <div class="kt-form__label kt-form__label-no-wrap">
-                            <label class="kt--font-bold kt-font-danger-">
-                                <span translate="ECOMMERCE.COMMON.SELECTED_RECORDS_COUNT"></span>
-                                {{ selection.selected.length }}
-                            </label>
-                            <!-- selectedCountsTitle => function from codeBehind (roles-list.component.ts file) -->
-                            <!-- selectedCountsTitle => just returns title of selected items count -->
-                            <!-- for example: Selected records count: 4 -->
-                        </div>
-                        <div class="kt-form__control kt-form__group--inline">
-                            <button (click)="fetchRoles()" mat-raised-button matTooltip="Fetch selected roles"
-                                class="mat-button-mt-4">
-                                <mat-icon>clear_all</mat-icon>
-                                Fetch Selected
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end::GROUP ACTIONS -->
         </div>
         <!-- end::FILTERS & GROUP ACTIONS -->
 
@@ -87,20 +58,25 @@
                     </mat-cell>
                 </ng-container> -->
 
-                <ng-container matColumnDef="id">
+                <ng-container matColumnDef="partnerId">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Partner ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.id}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.partnerId}}</mat-cell>
+                </ng-container>
+
+                <!-- <ng-container matColumnDef="partnerName">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Partner Name</mat-header-cell>
+                    <mat-cell *matCellDef="let role">{{role.partnerName}}</mat-cell>
+                </ng-container> -->
+
+                <ng-container matColumnDef="branchId">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Id</mat-header-cell>
+                    <mat-cell *matCellDef="let role">{{role.branchId}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Partner Name</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Branch name</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.name}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="commission">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Commission</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.commission}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
@@ -109,11 +85,11 @@
                         <button mat-icon-button color="primary" matTooltip="View Partner" (click)="viewRole(role)">
                             <mat-icon>visibility </mat-icon>
                         </button>&nbsp;
-                        <button mat-icon-button color="warn" matTooltip="Edit Partner" type="button"
+                        <button mat-icon-button color="accent" matTooltip="Edit Partner" type="button"
                             (click)="editRole(role)">
                             <mat-icon>create</mat-icon>
                         </button>&nbsp;
-                        <button mat-icon-button color="danger" matTooltip="Delete Partner" type="button"
+                        <button mat-icon-button color="warn" matTooltip="Delete Partner" type="button"
                             (click)="deleteRole(role)">
                             <mat-icon>delete</mat-icon>
                         </button>
