--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
@@ -76,7 +76,7 @@
 
                 <ng-container matColumnDef="name">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Branch name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.name}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
