--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
@@ -94,7 +94,7 @@
 
                 <ng-container matColumnDef="name">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Partner Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.name}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="commission">
