--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
@@ -8,6 +8,12 @@
             <button (click)="addRole()" mat-raised-button matTooltip="Create new partner" color="primary" type="button">
                 <span>Add Partner</span>
             </button>
+            <mat-form-field class="mat-form-field-fluid kt-padding-l-20">
+                <input matInput placeholder="Search user" #searchInput placeholder="Search">
+                <mat-hint align="start">
+                    <strong>Search</strong> in all fields
+                </mat-hint>
+            </mat-form-field>
             <!-- Buttons (Material Angular) | See off.documenations 'https://material.angular.io/components/button/overview' -->
             <!-- mat-raised-button | Rectangular contained button w/ elevation  -->
         </ng-container>
@@ -17,20 +23,6 @@
     <kt-portlet-body>
         <!-- start::FILTERS & GROUP ACTIONS -->
         <div class="kt-form kt-margin-b-10">
-            <!-- start::FILTERS -->
-            <div class="kt-form__filtration">
-                <div class="row align-items-center">
-                    <div class="col-md-2 ml-auto kt-margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid">
-                            <input matInput placeholder="Search user" #searchInput placeholder="Search">
-                            <mat-hint align="start">
-                                <strong>Search</strong> in all fields
-                            </mat-hint>
-                        </mat-form-field>
-                    </div>
-                </div>
-            </div>
-            <!-- end::FILTERS -->
 
             <!-- start::GROUP ACTIONS -->
             <!-- Group actions list: 'Delete selected' | 'Fetch selected' | 'Update status for selected' -->
