--- a/gold-admin-frontend/src/app/views/theme/base/base.component.html
+++ b/gold-admin-frontend/src/app/views/theme/base/base.component.html
@@ -41,7 +41,7 @@
 
 		<kt-quick-panel></kt-quick-panel>
 		<kt-scroll-top></kt-scroll-top>
-		<kt-sticky-toolbar></kt-sticky-toolbar>
+		<!-- <kt-sticky-toolbar></kt-sticky-toolbar> -->
 	</div>
 </ng-container>
 <!-- end:: Page -->
