image and header changes

--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -4,11 +4,11 @@
 	<kt-user-profile [greeting]="false" [avatar]="false" [badge]="false" [icon]="true"></kt-user-profile>
 	<!--end: User bar -->
 	<!--begin: Quick panel toggler -->
-	<div class="kt-header__topbar-item kt-header__topbar-item--quickpanel" data-placement="left" ngbTooltip="Quick panel">
+	<!-- <div class="kt-header__topbar-item kt-header__topbar-item--quickpanel" data-placement="left" ngbTooltip="Quick panel">
 		<div class="kt-header__topbar-wrapper">
 			<span class="kt-header__topbar-icon" id="kt_quick_panel_toggler_btn"><i class="flaticon2-cube-1"></i></span>
 		</div>
-	</div>
+	</div> -->
 	<!--end: Quick panel toggler -->
 </div>
 <!-- end:: Header Topbar -->
