--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -2,7 +2,7 @@
 <div class="kt-header__brand kt-grid__item" id="kt_header_brand" [ngClass]="htmlClassService.getClasses('brand', true)">
 	<div class="kt-header__brand-logo">
 		<a href="javascript:;" routerLink="/">
-			<img alt="logo" [attr.src]="headerLogo"/>
+			<img alt="logo" [attr.src]="headerLogo" [height]="height"/>
 		</a>
 	</div>
 </div>
