--- a/gold-admin-frontend/src/app/views/theme/header/header.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/header.component.html
@@ -9,19 +9,30 @@
 	<!-- end:: Brand -->
 
 	<!-- begin:: Title -->
-	<h3 class="kt-header__title kt-grid__item">
+	<!-- <h3 class="kt-header__title kt-grid__item">
 		Augmont Gold Loan
-	</h3>
+	</h3> -->
 	<!-- end:: Title -->
 
 	<!-- begin: Header Menu -->
-	<kt-menu-horizontal *ngIf="menuHeaderDisplay"></kt-menu-horizontal>
+	<!-- <kt-menu-horizontal *ngIf="menuHeaderDisplay"></kt-menu-horizontal> -->
 	<!-- end: Header Menu -->
 
 	<!-- begin:: Header Topbar -->
 	<!-- empty div to fix topbar to stay on the right when menu-horizontal is hidden -->
-	<div *ngIf="!menuHeaderDisplay"></div>
-	<kt-topbar></kt-topbar>
+	<!-- <div *ngIf="!menuHeaderDisplay"></div>
+	<kt-topbar></kt-topbar> -->
 	<!-- end:: Header Topbar -->
+		<div class="row w-100">
+			<div class="col-6 d-flex">
+				<h3 class="kt-header__title kt-grid__item">
+					Augmont Gold Loan
+				</h3>
+			</div>
+			<div class="offset-5 col-1" >
+					<kt-topbar></kt-topbar>
+			</div>
+		</div>
+
 </div>
 <!-- end: Header -->
