--- a/gold-admin-frontend/src/assets/sass/global/layout/brand/_brand.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/brand/_brand.scss
@@ -7,9 +7,9 @@
 .kt-header__brand {
 	display: flex;
 	flex-direction: row;
-	padding: 0 kt-get($kt-page-padding, desktop);
+	padding: 8px kt-get($kt-page-padding, desktop) 0;
 	height: kt-get($kt-header-config, base, desktop, default, height);
-	background-color: $kt-secondary-brand-color;
+	background-color: #454D67;
 	justify-content: center;
 	align-self: center;
 	width: 100%;
