add leads screen

--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
@@ -1,4 +1,13 @@
 <kt-portlet>
+    <kt-portlet-header [title]="'Branches List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+
+        <ng-container ktPortletTools>
+            <button (click)="addLead()" mat-raised-button matTooltip="Create new Lead" color="primary" type="button">
+                <span>Add Branch</span>
+            </button>
+        </ng-container>>
+
+    </kt-portlet-header>
     <kt-portlet-body>
 
         <div class="mat-table__wrapper">
